# tab-cleaner-mvp-dafei-ver

./: .vercelignore  AI_SEARCH_ARCHITECTURE.md  BOUNCE_FIX_COMPLETE.md  CHECKLIST.md  CHROME_STORE_DESCRIPTION.md  CHROME_STORE_PACKAGING.md  CHROME_STORE_REVIEW_FORM.md  CHROME_STORE_REVIEW_FORM_EN.md  CHROME_STORE_SUBMISSION.md  CLEAN_FLOW_CHECKLIST.md  CLEAN_FLOW_DOCUMENTATION.md  CLEAN_FLOW_SIMPLE.md  COMMIT_MESSAGE.md  DATA_FLOW_DOCUMENTATION.md  DATA_SYNC_ANALYSIS.md  DIAGNOSIS_GUIDE.md  DOC_CARD_VISUALIZATION.md  FRONTEND_BACKEND_SPLIT.md  FRONTEND_SEARCH_ADAPTATION.md  IMAGE_CAPTURE_FEATURES.md  IMAGE_CAPTURE_METHODS.md  IMAGE_LOADING_ISSUE_ANALYSIS.md  LICENSE  LOCAL_FIRST_WORKFLOW.md  LOCAL_OPENGRAPH_GUIDE.md  LOCAL_PREVIEW_GUIDE.md  OG_CAPTURE_OPTIMIZATION.md  OPENGRAPH_COMMUNICATION_CHECK.md  OPENGRAPH_IO_INTEGRATION.md  OPTIMIZED_FLOW.md  PRIVACY_POLICY_SETUP.md  QUICK_START.md  RAG_UPGRADE_PLAN.md  RAILWAY_DEPLOYMENT.md  README.md  RESTART_BACKEND.md  ROLLBACK_GUIDE.md  SCREENSHOT_MODE_GUIDE.md  SEARCH_ACCURACY_IMPROVEMENT.md  SEARCH_LOGIC_DOCUMENTATION.md  (+14 more)
backend/app/: AUTO_CAPTION_IMPLEMENTATION.md  CHROME_EXTENSION_SCREENSHOT_GUIDE.md  DELETE_API_EXPLANATION.md  DEPENDENCY_ANALYSIS.md  DIAGNOSE_SCOPE_EXPLANATION.md  DOC_SITES_VISUALIZATION.md  DUPLICATE_REQUEST_FIX.md  EMBEDDING_DIAGNOSE_GUIDE.md  EMBEDDING_MISSING_EXPLANATION.md  EXPORT_USER_DATA_GUIDE.md  FILL_CAPTIONS_GUIDE.md  FLOW_CHECK_REPORT.md  FRONTEND_BACKEND_CONNECTION_CHECK.md  RAG_EVALUATION.md  RAILWAY_BUILD_LOGS_GUIDE.md  RAILWAY_PORT_CONFIG.md  README.md  SCHEMA_UPGRADE_GUIDE.md  (+71 more)
(+263 files in other folders)
